--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,8 @@
         border-radius: 50%;
       }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7279242771183531"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
